<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="tuning"
        android:title="Строй" />
    <com.diatanato.android.fretboarlogic.settings.preferences.NumberPickerPreference
        android:defaultValue="0"
        android:key="min"
        android:title="@string/pref_min_title" />
    <com.diatanato.android.fretboarlogic.settings.preferences.NumberPickerPreference
        android:defaultValue="3"
        android:key="max"
        android:title="@string/pref_max_title" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_alteration_titles"
        android:entryValues="@array/pref_alteration_values"
        android:key="alteration"
        android:summary="%s"
        android:title="@string/pref_alteration_title" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="zoom"
        android:title="@string/pref_zoom_title" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="reverse"
        android:title="@string/pref_reverse_title" />
</PreferenceScreen>
